# faster_jpath

./: CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  faster_jpath.gemspec
lib/: faster_jpath.rb
lib/faster_jpath/: version.rb
spec/: faster_jpath_spec.rb  jpath_spec.rb  spec_helper.rb
src/: jpath.rs  lib.rs
src/serde_anyobject/: error.rs  mod.rs  ser.rs
