[package]
name = "faster_jpath"
version = "0.1.0"
authors = ["Vagmi Mudumbai <vagmi.mudumbai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="faster_jpath"
crate-type=["cdylib"]

[dependencies]
rutie = {version="0.8.1", features=["no-link"]}
jmespath = {git = "https://github.com/jmespath/jmespath.rs", branch = "master"}
snafu = "0.6.9"
serde_json = "1.0.58"
serde = {version="1.0.116", features=["rc"]}
